    code is refactored to support append-only FS, and to allow for future
    customization of per-segment information. (Andrzej Bialecki)

  * LUCENE-2479: Added ability to provide a sort comparator for spelling suggestions along
    with two implementations.  The existing comparator (score, then frequency) is the default (Grant Ingersoll)

API Changes

  * LUCENE-2606: Changed RegexCapabilities interface to fix thread 
    safety, serialization, and performance problems. If you have
    written a custom RegexCapabilities it will need to be updated
    to the new API.  (Robert Muir, Uwe Schindler)
======================= Lucene 3.x (not yet released) =======================

Changes in backwards compatibility policy

 * LUCENE-2100: All Analyzers in Lucene-contrib have been marked as final.
   Analyzers should be only act as a composition of TokenStreams, users should
   compose their own analyzers instead of subclassing existing ones.
   (Simon Willnauer) 

 * LUCENE-2194, LUCENE-2201: Snowball APIs were upgraded to snowball revision
   502 (with some local modifications for improved performance). 
   Index backwards compatibility and binary backwards compatibility is 
   preserved, but some protected/public member variables changed type. This 
   does NOT affect java code/class files produced by the snowball compiler, 
   but technically is a backwards compatibility break.  (Robert Muir)
   
 * LUCENE-2226: Moved contrib/snowball functionality into contrib/analyzers.
   Be sure to remove any old obselete lucene-snowball jar files from your
   classpath!  (Robert Muir)
   
 * LUCENE-2323: Moved contrib/wikipedia functionality into contrib/analyzers.
   Additionally the package was changed from org.apache.lucene.wikipedia.analysis
   to org.apache.lucene.analysis.wikipedia.  (Robert Muir)

 * LUCENE-2581: Added new methods to FragmentsBuilder interface. These methods
   are used to set pre/post tags and Encoder. (Koji Sekiguchi)
    
Changes in runtime behavior
